ros2_ws/log/build_2024-08-14_14-59-22/person_follower/stderr.log
  File "/home/orinnano/turtlebot3-person-follower/ros2_ws/install/person_follower/lib/python3.10/site-packages/src/person_follower.py", line 63
    twist.angular.z = -(center[0] - img_center_x) * 0.008.
                                                          ^
SyntaxError: invalid syntax

